test/libsolidity/syntaxTests/empty_struct_050.sol
pragma experimental "v0.5.0";
contract test {
	struct A {}
}
// ----
// SyntaxError: Defining empty structs is disallowed.
